[package]
name = "flash"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clang = "1.0.2"
clap = { version = "4.0.29", features = ["derive"] }
glob = "0.3.0"
serde = { version = "1.0.151", features = ["derive"] }
serde_json = "1.0.89"
shlex = "1.1.0"
strfmt = "0.2.2"
