[package]
name = "flash"
version = "0.1.0"
edition = "2021"
authors = ["HJfod"]
description = "Documentation generator for C++"
readme = "README.md"
repository = "https://github.com/hjfod/flash"
license-file = "LICENSE"
keywords = ["documentation"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clang = "1.0.2"
clap = { version = "4.0.29", features = ["derive"] }
glob = "0.3.0"
indicatif = "0.17.2"
serde = { version = "1.0.151", features = ["derive", "rc"] }
serde_json = "1.0.91"
shlex = "1.1.0"
strfmt = "0.2.2"
toml = "0.5.10"
flash-macros = { path = "macros" }
tokio = { version = "1.23.1", features = ["full"] }
futures = "0.3.25"
percent-encoding = "2.2.0"
multipeek = "0.1.2"
pulldown-cmark = "0.9.2"
